# GreensFunction

./: .gitignore  CMakeList  CMakeLists.txt  README.md  main.cpp  pyproject.toml  setup.py
BeamSolver/: __init__.py  core.py
OBS/: pyproject.toml
OBS/Poly_engine/: Polynomial.cpp  Polynomial.h
OBS/include/: solver.h
Poly_engine/: Polynomial.cpp  Polynomial.h  main.cpp  material.h
include/: coeff.h  material.h
sources/bindings/: module.cpp
sources/cores/: beam_solver.cpp  beam_solver.hpp  green_kernel.cpp  green_kernel.hpp
sources/greensfunction/: __init__.py
src/: bindings.cpp  solver.cpp
